2004-07-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/fit.c: #include gp_time.h is now necessary.

2004-07-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* PATCHLEVEL: Raised to 2 to mark post ANSI-fication status.

	* src/version.c (gnuplot_patchlevel, gnuplot_date): Updated.

	* ChangeLog, ChangeLog.0: Cycled the ChangeLog.  Entries before
	the 4.0.0 release are now in ChangeLog.0, newer ones in ChangeLog
	(this file).

	* src/util.c (mant_exp): Modulo results can be negative.
	Aaargh!

2004-06-30  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* PATCHLEVEL: Raised to 1 in preparation of ANSI-fication.

	* src/version.c (gnuplot_patchlevel, gnuplot_date): Updated.
	(RELEASE_VERSION): Turn off.

	* INSTALL: removed pointless copy of startup banner screen.

	* docs/gnuplot.texi: Regenerated.
	
	* term/post.trm (PS_linewidth_last): New variable.
	(PS_graphics, PS_point, PS_fillbox): Initialize it.
	(PS_linetype): Call PS_FLUSH_PATH here, too.
	(PS_linewidth): Don't break the path if the new linewidth is the
	same as the cached value PS_linewidth_last.  Do a PS_FLUSH_PATH
	here, too.

	* term/debug.trm (DEBUG_arrow): Fix type of 'head' argument.

	* src/hidden3d.c (in_front): Slight change to handling of points
	falling onto edges of triangles in 2D.  Reindentations.

	* src/fit.c (log_axis_restriction): New function to output the
	actual state of the axis ranges, as optionally modified by range
	specified in the fit command line.
	(fit_command): Use it.

	* src/graphics.c (plot_bars): Reindentation.

	* src/util.c (mant_exp): Reindentation.

	* src/plot3d.c (print_3dtable): #undef OUTPUT_NUMBER earlier.

2004-06-24  Ethan Merritt  <merritt@u.washington.edu>

	* src/mouse.c (event_reset): If 'pause mouse' terminates because
	the plot window is closed, insert an extra '\n' into the input
	stream so that the first character of the subsequent command is
	not swallowed.

2004-06-20  Ethan Merritt  <merritt@u.washington.edu>
